strings2/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-wakaise/rustlings-wakaise/format_check)
error[E0308]: mismatched types
  --> src/lib.rs:12:24
   |
12 |     if is_a_color_word(word) {
   |        --------------- ^^^^ expected `&str`, found `String`
   |        |
   |        arguments to this function are incorrect
   |
note: function defined here
  --> src/lib.rs:19:4
   |
19 | fn is_a_color_word(attempt: &str) -> bool {
   |    ^^^^^^^^^^^^^^^ -------------
help: consider borrowing here
   |
12 |     if is_a_color_word(&word) {
   |                        +

For more information about this error, try `rustc --explain E0308`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
